<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:background="@drawable/table_ok_bottom_btn_bg"
            android:textColor="@color/white"
            android:id="@+id/btnSelectFile"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/button_select_file" />

        <Button

            android:background="@drawable/table_ok_bottom_btn_bg"
            android:textColor="@color/white"
            android:id="@+id/btnPrinterSettings"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/button_printer_settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="@drawable/table_ok_bottom_btn_bg"
            android:textColor="@color/white"
            android:id="@+id/btnPrinterStatus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/button_printer_status" />

        <Button
            android:background="@drawable/table_ok_bottom_btn_bg"
            android:textColor="@color/white"
            android:id="@+id/btnPrint"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/button_print" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chkMultipleSelect"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/chkbox_multiple_select" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSelectedFiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="@string/text_select_image" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" />


</LinearLayout>